Fix navigation mobile with padding bottom ignore safe area on mobile

--- a/src/app/components/Navigation.scss
+++ b/src/app/components/Navigation.scss
@@ -36,11 +36,10 @@
       left: 0px;
       right: 0px;
       bottom: 0px;
-      padding-bottom: env(safe-area-inset-bottom);
+      padding-bottom: calc(env(safe-area-inset-bottom) + 2px);
       padding-top: 2px;
       padding-left: 8px;
       padding-right: 8px;
-      padding-bottom: 2px;
     }
     @media screen and (max-width: 340px) {
       position: absolute;
